--- a/release-notes/30.09.2016.md
+++ b/release-notes/30.09.2016.md
@@ -1,5 +1,5 @@
 # Release 30.09.2016
-- New ‘Officers’ view is added on the Company profile in the list of available view where  existing officeholders and ceased officeholders of the chosen company are shown.
-- An ability to divide and consolidate shares is added on the Form 2205
-- Support of MasterCards with Card Number starting with 2 is added
-- An ability to enter the discount voucher on the Payment page
+1. New ‘Officers’ view is added on the Company profile in the list of available view where  existing officeholders and ceased officeholders of the chosen company are shown.
+2. An ability to divide and consolidate shares is added on the Form 2205
+3. Support of MasterCards with Card Number starting with 2 is added
+4. An ability to enter the discount voucher on the Payment page
