--- a/release-notes/05.10.2016.md
+++ b/release-notes/05.10.2016.md
@@ -1,9 +1,9 @@
 # Release 05.10.2016
-* Officers Registry export button is added to Company profile
-* More Officer management operations available on the Company Profile..
-- A new class of share - APRF shares is added into list of common share classes
-- Hard Copy improvements: now you can enter a custom address and attach extra documents.
+* An Officers Registry export button has been added to the Company profile
+* Comprehensive Officer Management operations are now available on the Company Profile
+- APRF shares have been added into the list of common share classes
+- Hard Copy improvements: you can now enter a custom address and attach extra documents
 - The new Annual Statement panel is now available for Early Adopters
-- Deed of Rectification is added for electronic signing procedure for some of Trust Deeds
-- Paper Signing option is now available for Trust Registry documents
-- Certificates + Transactions are available in Trust Registry
+- A Deed of Rectification has been added for E-signing on Trust Documents
+- A Paper Signing option has been made available for Trust Registry documents
+- Certificates & Transactions have been available in Trust Registry
