--- a/release-notes/20.10.2016.md
+++ b/release-notes/20.10.2016.md
@@ -1,4 +1,4 @@
-# Release 020.10.2016
+# !Release 20.10.2016
 * Generating the ‘Consent to Act’ as a separate file in the documentation for 484-B12 and 484-E forms
 * Invoice files are removed from the hard copy email before sending
 * Slight re-design of Annual Statements panel
