--- a/release-notes/20.10.2016.md
+++ b/release-notes/20.10.2016.md
@@ -2,5 +2,6 @@
 * Generating the ‘Consent to Act’ as a separate file in the documentation for 484-B12 and 484-E forms
 * Invoice files are removed from the hard copy email before sending
 * Slight re-design of Annual Statements panel
+* Issue with signing the documents generated with Bundle edit is fixed
 * Bug fix
   
