--- a/release-notes/02.11.2016.md
+++ b/release-notes/02.11.2016.md
@@ -1,6 +1,5 @@
 # Release notes 02.11.2016
-* Annual statement panel became available for all users
-Notifications for switching to a new panel will be shown when they will open Annual statements tab in the Inbox.
+* Annual statement panel became available for all users. Notifications for switching to a new panel will be shown when they will open Annual statements tab in the Inbox.
 * New header design and navigation
 * Multiple effective dates in the 484A1 form
 * Past officeholders are now available on the Officers view
