--- a/release-notes/02.11.2016.md
+++ b/release-notes/02.11.2016.md
@@ -1,3 +1,15 @@
+# Release 20.10.2016
+* Generating the ‘Consent to Act’ as a separate file in the documentation for 484-B12 and 484-E forms
+* Invoice files are removed from the hard copy email before sending
+* Slight re-design of Annual Statements panel
+* XPM Contacts Sync option is now available on the Companies page for Early adopters users
+* Customer contact details preload when sending the document for E-Signing is added
+* Issue with signing the documents generated with Bundle edit is fixed
+* Bug fix
+  
+
+
+
 # Release notes 02.11.2016
 * Annual statement panel became available for all users. Notifications for switching to a new panel will be shown when they will open Annual statements tab in the Inbox.
 * New header design and navigation
