--- a/release-notes/02.11.2016.md
+++ b/release-notes/02.11.2016.md
@@ -1,9 +1,10 @@
-# Release 20.10.2016
-* Generating the ‘Consent to Act’ as a separate file in the documentation for 484-B12 and 484-E forms
-* Invoice files are removed from the hard copy email before sending
-* Slight re-design of Annual Statements panel
-* XPM Contacts Sync option is now available on the Companies page for Early adopters users
-* Customer contact details preload when sending the document for E-Signing is added
-* Issue with signing the documents generated with Bundle edit is fixed
+# Release notes 02.11.2016
+* Annual statement panel became available for all users. Notifications for switching to a new panel will be shown when they will open Annual statements tab in the Inbox.
+* New header design and navigation
+* Multiple effective dates in the 484A1 form
+* Past officeholders are now available on the Officers view
+* Permissions for users are added and can be changed on the Portal settings page
+* Sending email notification to users when ASIC password is reset
+* An ability to select a way how the emails will be sent to users is added in the 'Emails sttings' section on the Portal settings page 
+* Error with changing the data for more than 50 companies via Bundle edit is fixed
 * Bug fix
- 
