--- a/release-notes/02.11.2016.md
+++ b/release-notes/02.11.2016.md
@@ -8,3 +8,4 @@
 * An ability to select a way how the emails will be sent to users is added in the 'Emails sttings' section on the Portal settings page 
 * Error with changing the data for more than 50 companies via Bundle edit is fixed
 * Bug fix
+dsdsdsdfsdf
