--- a/release-notes/02.11.2016.md
+++ b/release-notes/02.11.2016.md
@@ -1,4 +1,4 @@
-# Release notes 02.11.2016
+# Release 02.11.2016
 * Annual statement panel became available for all users. Notifications for switching to a new panel will be shown when they will open Annual statements tab in the Inbox.
 * New header design and navigation
 * Multiple effective dates in the 484A1 form
@@ -8,4 +8,4 @@
 * An ability to select a way how the emails will be sent to users is added in the 'Emails sttings' section on the Portal settings page 
 * Error with changing the data for more than 50 companies via Bundle edit is fixed
 * Bug fix
-* dsdsdsdfsdf
+
