--- a/release-notes/14.11.2016.md
+++ b/release-notes/14.11.2016.md
@@ -1,6 +1,6 @@
 # Release 14.11.2016
-* Burning lodgements tab is added on the Lodgements page for documents with the lodgement deadline in the nearest time
-* 'Selected' tab is added on the Companies, Lodgements, Reminders, Trusts page. It appears once at least one row is selected from the table with data 
+* Burning lodgements tab is added on the Lodgements page for documents with the lodgement upcoming deadline in the nearest time
+* 'Selected' tab is added on the Companies, Lodgements, Reminders, Trusts page. It appears if at least one row is selected from the table with data 
 * ‘Lodge selected’ option is added on the Lodgements page. Option allows users to lodge several documents at once
 * ‘Send Reminders Out Automatically’ check box moved to ‘Reminders’ section on the Portal settings page
 * 'Deed of Forgiveness' and ‘Deed of Discharge and Vesting' documents are added under Loans section
