--- a/release-notes/10.12.2016.md
+++ b/release-notes/10.12.2016.md
@@ -1,5 +1,5 @@
 # Release 10.12.2016
 * Option to switch ON / Switch OFF signing before lodging the document to ASIC is removed from the last page of the ASIC documents. Documents now cannot be lodged straigtaway after been generated.
-* Case editing is added for Shareholders on the Company profile. Now user can change casing in the Officers aтв Shareholders names
+* Case editing is added for Shareholders on the Company profile. Now user can change casing in the Officers and Shareholders names
 * 'Include 362 form' option is removed from the last page of the Standard company form.
 * 'My statements' check box is added on the Annual statements panel that allows to show only the statements of the Companies where the current user is an Account manager.
