--- a/release-notes/13.01.2017.md
+++ b/release-notes/13.01.2017.md
@@ -6,3 +6,5 @@
 - Custom export on Companies page: an ability to select columns to export data to CSV and Excel file
 - 'Webinars' section is added in the Menu under the ‘TRAINING & TECH’ section
 - ‘Unarchive’ button is added against archived Annual statement on the Annual statement panel
+- 'Send Test Email' button is added on the SMTP settings page with an ability to send the test messages before saving added settings.
+- Annual review date and Registration date parameters are now can be added into the document when export companies to excel / csv files.
