--- a/release-notes/03.02.2017.md
+++ b/release-notes/03.02.2017.md
@@ -6,9 +6,9 @@
 - ‘Overdue’ tab is added in the Annual statements panel. All the statements with the payment deadline in the past move to this section.
 - ‘Re-send’ option is added on the ‘Outgoing emails’ page. User can now re-send a sent email to another email address. Send email will be added in the ‘Outgoing emails’ section as a new sent email.
 - New documents are added in the list of the documents:
-1. DEED OF FORGIVENESS (other than LRBA)
-2. DEED OF VARIATION FOR FOREIGN UNIT TRUST
-3. DEED OF VARIATION FOR FOREIGN DISCRETIONARY TRUST 
-4. DECLARATION OF TRUST 
-5. DEED OF FORGIVENESS FOR LRBA
-6. DEED OF DISCHARGE AND RELEASE
+  - DEED OF FORGIVENESS (other than LRBA)
+  - DEED OF VARIATION FOR FOREIGN UNIT TRUST
+  - DEED OF VARIATION FOR FOREIGN DISCRETIONARY TRUST 
+  - DECLARATION OF TRUST 
+  - DEED OF FORGIVENESS FOR LRBA
+  - DEED OF DISCHARGE AND RELEASE
