Update and rename Release notes 01.12.2016.md to 01.12.2016.md

--- a/release-notes/01.12.2016.md
+++ b/release-notes/01.12.2016.md
@@ -1,4 +1,4 @@
-# Release notes 01.12.2016
+# Release notes 01 February 2016
 1. Outlook Addin ia available for Beta testing
 2. Trust registry is  available for Early Adopters users
 3. Company status update, pending changes and other activity notifications are added on the Company profile
